--- a/src/css/base1.css
+++ b/src/css/base1.css
@@ -62,7 +62,7 @@ nav li {
     clear:both;
 }
 #contents1 {
-    width:70%;
+    width:55%;
     vertical-align: middle;
     font-size: 10px;
     height:auto;
@@ -71,7 +71,7 @@ nav li {
     display:inline-block;
 }
 #contents2 {
-    width:30%;
+    width:40%;
     height:auto;
     border:1px solid lightgrey;
     box-sizing:border-box;
@@ -79,6 +79,8 @@ nav li {
     display:inline-block;
     align:center;
     padding: 5px;
+    margin-left: 46px;
+
 }
 #contents2 h3 {
     float:left;
