--- a/src/lecture01/style-START.css
+++ b/src/lecture01/style-START.css
@@ -93,3 +93,18 @@ nav a {
   transition:all 0.2s;
   text-transform: uppercase;
 }
+img {
+  opacity: 0;
+  transform: translateX(-30%);
+  transition: all 0.5s ease-out;
+}
+.slide-in {
+  opacity: 1;
+  transform: translate(0);
+}
+
+.fixed-navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;  
+}
