--- a/src/lecture04/main.css
+++ b/src/lecture04/main.css
@@ -38,9 +38,15 @@ html,body {
 [data-clock] {
     z-index:1;
 }
+
 [data-name] {
     z-index:1;
 }
+
+[data-todo] {
+    z-index:1;
+}
+
 
 [data-name] input {
     background-color : transparent;
@@ -50,12 +56,24 @@ html,body {
     border:none;
     border-bottom: 1px solid #ccc;
     color: white;
+    text-align:center;
 }
 
 [data-name] h1 {
-    font-size: 40px;Í
+    font-size: 40px;
 }
 
-[data-name] input::placeholder {
+[data-name], [data-todo] input::placeholder {
     color:#ccc;
+    text-align:center;
+}
+
+[data-todo] input {
+    background-color : transparent;
+    outline: none;
+    padding: 10px;
+    font-size: 20px;
+    border:none;
+    border-bottom: 1px solid #ccc;
+    color: white;
 }
