--- a/src/lecture04/main.css
+++ b/src/lecture04/main.css
@@ -77,3 +77,8 @@ html,body {
     border-bottom: 1px solid #ccc;
     color: white;
 }
+
+.hand {
+    width:300px;
+    height:20px;
+    text-align:center; }
