--- a/src/lecture04/main.css
+++ b/src/lecture04/main.css
@@ -81,7 +81,7 @@ html,body {
 ul li {
     cursor: pointer;
     position: relative;
-    padding: 12px 8px 12px 40px;
+    padding: 12px 50px 12px 50px;
     background: transparent;
     font-size: 18px;
     transition: 0.2s;
@@ -96,15 +96,19 @@ ul li {
   }
 
 
-  .close {
+/* Style the close button */
+.close {
     position: absolute;
     right: 0;
     top: 0;
     padding: 12px 16px 12px 16px;
+    z-index:1;
+
   }
   
   .close:hover {
-    background-color: red;
+    background-color: #f44336;
     color: white;
+    z-index:1;
   }
-  
+ 
