--- a/src/lecture05/shoppingCart/shoppingCart.css
+++ b/src/lecture05/shoppingCart/shoppingCart.css
@@ -12,7 +12,8 @@ html, body {
     align-items:center;
     justify-content: center;
     font-size: 35px;
-    margin-top: 70px;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .goods-contentsInCart {
@@ -20,8 +21,13 @@ html, body {
     height: 200px;
     background-color: white;
     text-align: center;
-    display: block;
     justify-content: center;
     margin: auto;
 
+}
+
+.goods-contentsInCart ul li {
+    list-style:none;
+    margin-right : 70px;
+    margin-top: 100px;
 }
