--- a/src/lecture05/shoppingCart/shoppingCart.css
+++ b/src/lecture05/shoppingCart/shoppingCart.css
@@ -30,3 +30,41 @@ html, body {
     margin-right : 70px;
     margin-top: 100px;
 }
+.nav {
+    width:233px;
+    height:60px;
+    background-color:grey;
+    display:flex;
+    list-style: none;
+    float:right;
+    border-bottom:4px solid white;
+    align-items: center;
+    margin:0;
+    padding:0;
+}
+.goods-list , .shopping-cart , .order-list {
+    align-items: center;
+    width: auto;
+    margin: auto;
+    cursor:pointer;
+    background-color:grey;
+    padding:0 11px 0 11px;
+}
+
+.shopping-cart {
+    background-color: white;
+    color:black;
+    width: auto;
+    height:60px;
+    display:flex;
+}
+
+
+.nav li:hover {
+    background-color: white;
+    color:black;
+    width: auto;
+    height:60px;
+    display:flex;
+
+}
