--- a/src/lecture05/shoppingCart/shoppingCart.css
+++ b/src/lecture05/shoppingCart/shoppingCart.css
@@ -15,7 +15,7 @@ html, body {
     margin-top: 50px;
     margin-bottom: 50px;
 }
-
+/* 
 .goods-contentsInCart-list {
     width: 500px;
     height: 200px;
@@ -30,7 +30,7 @@ html, body {
     list-style:none;
     margin-right : 70px;
     margin-top: 100px;
-}
+} */
 .nav {
     width:233px;
     height:60px;
@@ -69,7 +69,7 @@ html, body {
     display:flex;
 }
 
-body div {
+body .shoppingCartList {
     text-align: center;
     display:flex;
     width: 500px;
@@ -83,7 +83,7 @@ body div {
     color:black;
 }
 
-body div li{
+body .shoppingCartList li{
     text-align:left;
     list-style: none;
     margin-left:20px;
@@ -96,3 +96,4 @@ a {
     text-decoration: none;
     color:white;    
 }
+
