--- a/src/lecture05/shoppingCart/shoppingCart.css
+++ b/src/lecture05/shoppingCart/shoppingCart.css
@@ -83,7 +83,7 @@ body .shoppingCartList {
     color:black;
 }
 
-body .shoppingCartList li{
+body .shoppingCartList p{
     text-align:left;
     list-style: none;
     margin-left:20px;
