--- a/src/lecture05/shoppingCart/shoppingCart.css
+++ b/src/lecture05/shoppingCart/shoppingCart.css
@@ -128,3 +128,54 @@ i{
     margin-top:10px;
     cursor:pointer;
 }
+
+.totalOfShoppingCartList {
+    width:100%;
+    color:white;
+
+}
+
+.grandTotal {
+    width:100%;
+    height:20px;
+}
+
+.total p{
+    float:right;
+    margin-right:70px;
+    font-size:18px;
+    margin-top:0px;
+    margin-bottom:-10px;
+}
+
+.info {
+    width: 500px;
+    height:300px;
+    border: 1px solid #BFBFBF;
+    box-shadow: 2px 2px 10px #aaaaaa;
+    background-color: white;
+    color:black;
+    margin:auto;
+    margin-top:30px;
+
+}
+
+.info h3 {
+    text-align: center;
+    display:flex;
+    align-items:center;
+    justify-content: center;
+    margin-top:35px;
+    margin-bottom:35px;
+}
+
+
+.info input{
+    font-size:15px;
+    padding:5px;
+    margin:auto;
+    margin-top:5px;
+    margin-bottom:5px;
+    display: block;
+    width:90%;
+}
