add information form

--- a/src/lecture05/shoppingCart/shoppingCart.css
+++ b/src/lecture05/shoppingCart/shoppingCart.css
@@ -150,7 +150,7 @@ i{
 
 .info {
     width: 500px;
-    height:300px;
+    height:350px;
     border: 1px solid #BFBFBF;
     box-shadow: 2px 2px 10px #aaaaaa;
     background-color: white;
@@ -178,4 +178,20 @@ i{
     margin-bottom:5px;
     display: block;
     width:90%;
+}
+
+.info .order {
+    width:60px;
+    height:40px;
+    font-size: 15px;
+    text-align: center;
+    display:flex;
+    align-items:center;
+    justify-content: center;
+    margin:auto;
+    margin-top: 18px;
+    background-color:white;
+    border:1px solid lightgrey;
+    border-radius: 5px;
+
 }
