--- a/src/lecture05/shoppingCart/shoppingCart.css
+++ b/src/lecture05/shoppingCart/shoppingCart.css
@@ -193,5 +193,9 @@ i{
     background-color:white;
     border:1px solid lightgrey;
     border-radius: 5px;
+}
 
+.info input[type=text]:focus {
+    outline: none;
+    border: 3px solid #555;  
 }
