--- a/share-goods/src/containers/Cart/Cart.module.css
+++ b/share-goods/src/containers/Cart/Cart.module.css
@@ -1,3 +1,17 @@
 .Cart {
     padding-bottom:100px;
 }
+
+.formCard {
+    width:500px;
+    height:310px;
+    border: 1px solid #eee;
+    box-shadow: 0 2px 3px #ccc;
+    box-sizing: border-box;
+    margin:auto;
+    text-align: center
+}
+
+h4 {
+    margin: 30px 0;
+}
