--- a/share-goods/src/components/Header/Header.css
+++ b/share-goods/src/components/Header/Header.css
@@ -5,14 +5,15 @@ html, body {
   header {
     height:60px;
     display: flex;
-    justify-content: space-around;
-
+    justify-content: space-between;
+    padding: 0 20px;
+    box-sizing: border-box;
+    margin-top:10px;
   }
 
   header ul {
     padding:0;
     margin:0;
-    margin-top:10px;
   }
   
   header ul li {
@@ -27,11 +28,10 @@ html, body {
     font-weight:600;
     margin: auto;
     cursor:pointer;
-    padding:15px 10px 15px 10px;
+    padding:20px 15px 20px 15px;
     font-size:16px;
     border-bottom:4px solid #aaa;
   }
-
 
   a:link {
     text-decoration: none;
@@ -45,10 +45,9 @@ html, body {
   header ul li:hover {
     background-color:grey;
     border-bottom:4px solid #aaa;
-
   }
   
   .logo {
-    height: 100%;
+    height:100%;
+    align-items: center;
   }
-
